--- a/PetWorld/src/main/resources/templates/pet-care-services-profile.html
+++ b/PetWorld/src/main/resources/templates/pet-care-services-profile.html
@@ -215,6 +215,7 @@
                     <div class="services-grid" id="servicesGrid">
                         <!-- Services will be dynamically inserted here -->
                     </div>
+                    <div id="paginationContainer" class="pagination-container"></div>
                 </div>
             </div>
         </div>
