--- a/PetWorld/src/main/resources/templates/booking-service.html
+++ b/PetWorld/src/main/resources/templates/booking-service.html
@@ -33,11 +33,10 @@
             <input type="datetime-local" id="datetime" name="datetime" required>
         </div>
 
-        <div class="pet-selection">
-            <label>Select Your Pet</label>
-            <div class="pet-grid" id="petsContainer">
-                <!-- Pet cards will be populated by JavaScript -->
-            </div>
+        <div class="pet-selection-section">
+            <h2>Select Your Pet</h2>
+            <div id="petsContainer"></div>
+            <div id="petsPaginationContainer" class="pagination-container"></div>
         </div>
 
         <div class="form-group">
