--- a/PetWorld/src/main/resources/templates/pet-services.html
+++ b/PetWorld/src/main/resources/templates/pet-services.html
@@ -174,6 +174,7 @@
                     </div>
                 </div>
             </div>
+            <div id="centersPaginationContainer" class="pagination-container"></div>
         </section>
 
         <!-- Services Section -->
@@ -201,6 +202,7 @@
                     </div>
                 </div>
             </div>
+            <div id="servicesPaginationContainer" class="pagination-container"></div>
         </section>
 
         <!-- Service Details Modal -->
